#set( $symbol_pound = '#' )
#set( $symbol_dollar = '$' )
#set( $symbol_escape = '\' )
<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>${groupId}</groupId>
  <artifactId>${artifactId}-parent</artifactId>
  <version>${version}</version>
  <packaging>pom</packaging>

  <name>${symbol_dollar}{project.groupId}:${symbol_dollar}{project.artifactId}</name>
  <description>Enter description here.</description>
  <url>https://example.com</url>

  <licenses>
    <license>
      <name>MIT License</name>
      <url>http://www.opensource.org/licenses/mit-license.php</url>
    </license>
  </licenses>

  <developers>
    <developer>
      <name>${developerName}</name>
      <email>${developerEmail}</email>
      <url>${developerUrl}</url>
    </developer>
  </developers>

  <scm>
    <connection>${scmConnection}</connection>
    <developerConnection>${scmConnection}</developerConnection>
    <url>${scmUrl}</url>
    <tag>${scmTag}</tag>
  </scm>

  <profiles>
    <profile>
      <id>release-sign-artifacts</id>
      <!-- mvn -DperformRelease=true deploy -->
      <activation>
        <property>
          <name>performRelease</name>
          <value>true</value>
        </property>
      </activation>
      <build>
        <plugins>
        
          <!-- gpg -->
          <plugin>
            <artifactId>maven-gpg-plugin</artifactId>
            <executions>
              <execution>
                <id>sign-artifacts</id>
                <phase>verify</phase>
                <goals>
                  <goal>sign</goal>
                </goals>
              </execution>
            </executions>
          </plugin>

          <!-- sonatype release -->
          <plugin>
            <groupId>org.sonatype.plugins</groupId>
            <artifactId>nexus-staging-maven-plugin</artifactId>
            <extensions>true</extensions>
            <configuration>
              <serverId>ossrh</serverId>
              <nexusUrl>https://oss.sonatype.org/</nexusUrl>
              <autoReleaseAfterClose>false</autoReleaseAfterClose>
            </configuration>
          </plugin>
        </plugins>
      </build>
    </profile>
  </profiles>

  <modules>
    <module>${rootArtifactId}-lib</module>
    <module>${rootArtifactId}-example</module>
    <module>${rootArtifactId}-dist</module>
  </modules>
  
  <properties>
    <java.version>11</java.version>
    <pmd.version>6.22.0</pmd.version>
    <checkstyle.version>8.29</checkstyle.version>
    <maven-clean-plugin.version>3.1.0</maven-clean-plugin.version>
    <maven-resources-plugin.version>3.1.0</maven-resources-plugin.version>
    <maven-compiler-plugin.version>3.8.1</maven-compiler-plugin.version>
    <maven-source-plugin.version>3.2.0</maven-source-plugin.version>
    <maven-javadoc-plugin.version>3.2.0</maven-javadoc-plugin.version>
    <maven-surefire-plugin.version>2.22.2</maven-surefire-plugin.version>
    <maven-jar-plugin.version>3.2.0</maven-jar-plugin.version>
    <maven-install-plugin.version>2.5.2</maven-install-plugin.version>
    <maven-deploy-plugin.version>2.8.2</maven-deploy-plugin.version>
    <maven-site-plugin.version>3.8.2</maven-site-plugin.version>
    <maven-project-info-reports-plugin.version>3.0.0</maven-project-info-reports-plugin.version>
    <maven-checkstyle-plugin.version>3.1.1</maven-checkstyle-plugin.version>
    <maven-pmd-plugin.version>3.13.0</maven-pmd-plugin.version>
    <maven-enforcer-plugin.version>3.0.0-M2</maven-enforcer-plugin.version>
    <maven-assembly-plugin.version>3.2.0</maven-assembly-plugin.version>
    <maven-surefire-report-plugin.version>3.0.0-M3</maven-surefire-report-plugin.version>
    <maven-jxr-plugin.version>3.0.0</maven-jxr-plugin.version>
    <nexus-staging-maven-plugin.version>1.6.8</nexus-staging-maven-plugin.version>
    <maven-gpg-plugin.version>1.6</maven-gpg-plugin.version>

    <exec-maven-plugin.version>1.6.0</exec-maven-plugin.version>
    <versions-maven-plugin.version>2.7</versions-maven-plugin.version>
    <spotbugs-maven-plugin.version>3.1.12.2</spotbugs-maven-plugin.version>
    <jacoco-maven-plugin.version>0.8.5</jacoco-maven-plugin.version>
    <spotless-maven-plugin.version>1.27.0</spotless-maven-plugin.version>
    <dependency-check-maven.version>5.2.4</dependency-check-maven.version>
    <requireMavenVersion.version>3.6</requireMavenVersion.version>
    <requireJavaVersion.version>1.8</requireJavaVersion.version>
  </properties>
  
  <distributionManagement>
    <snapshotRepository>
      <id>ossrh</id>
      <url>https://oss.sonatype.org/content/repositories/snapshots</url>
    </snapshotRepository>
    <repository>
      <id>ossrh</id>
      <url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
    </repository>
    <site>
      <id>www.yourcompany.com</id>
      <url>scp://www.yourcompany.com/www/docs/project/</url>
    </site>
  </distributionManagement>
 
  <pluginRepositories>
    <pluginRepository>
      <id>central</id>
      <url>https://repo.maven.apache.org/maven2/</url>
      <name>maven central repository</name>
      <releases>
        <enabled>true</enabled>
        <!-- http://maven.apache.org/pom.html#Repositories  -->
        <updatePolicy>interval:180</updatePolicy>
      </releases>
      <snapshots>
        <enabled>false</enabled>
      </snapshots>
    </pluginRepository>
        
    <pluginRepository>
      <id>apache.snapshots</id>
      <url>http://repository.apache.org/snapshots/</url>
      <name>maven repository for snapshots</name>
      <releases>
        <enabled>false</enabled>
      </releases>
      <snapshots>
        <enabled>true</enabled>
        <updatePolicy>interval:180</updatePolicy>
      </snapshots>
    </pluginRepository>
        
    <pluginRepository>
      <id>other.snapshots</id>
      <name>maven repository for snapshots (MojoHouse)</name>
      <url>https://oss.sonatype.org/content/repositories/snapshots/</url>
      <releases>
        <enabled>false</enabled>
      </releases>
      <snapshots>
        <enabled>true</enabled>
        <updatePolicy>interval:180</updatePolicy>
      </snapshots>
    </pluginRepository>
  </pluginRepositories>

  <build>
    <pluginManagement>
      <plugins>
        <plugin>
          <artifactId>maven-clean-plugin</artifactId>
          <version>${symbol_dollar}{maven-clean-plugin.version}</version>
        </plugin>
        <plugin>
          <artifactId>maven-resources-plugin</artifactId>
          <version>${symbol_dollar}{maven-resources-plugin.version}</version>
        </plugin>
        <plugin>
          <artifactId>maven-compiler-plugin</artifactId>
          <version>${symbol_dollar}{maven-compiler-plugin.version}</version>
        </plugin>
        <plugin>
          <artifactId>maven-source-plugin</artifactId>
          <version>${symbol_dollar}{maven-source-plugin.version}</version>
        </plugin>
        <plugin>
          <artifactId>maven-javadoc-plugin</artifactId>
          <version>${symbol_dollar}{maven-javadoc-plugin.version}</version>
        </plugin>
        <plugin>
          <artifactId>maven-surefire-plugin</artifactId>
          <version>${symbol_dollar}{maven-surefire-plugin.version}</version>
          <!-- https://winterbe.com/posts/2018/08/29/migrate-maven-projects-to-java-11-jigsaw/ -->
          <configuration>
            <argLine>
              --illegal-access=permit
            </argLine>
          </configuration>
        </plugin>
        <plugin>
          <artifactId>maven-surefire-report-plugin</artifactId>
          <version>${symbol_dollar}{maven-surefire-report-plugin.version}</version>
        </plugin>
        <plugin>
          <artifactId>maven-jar-plugin</artifactId>
          <version>${symbol_dollar}{maven-jar-plugin.version}</version>
        </plugin>
        <plugin>
          <artifactId>maven-install-plugin</artifactId>
          <version>${symbol_dollar}{maven-install-plugin.version}</version>
        </plugin>
        <plugin>
          <artifactId>maven-deploy-plugin</artifactId>
          <version>${symbol_dollar}{maven-deploy-plugin.version}</version>
        </plugin>
        <plugin>
          <artifactId>maven-jxr-plugin</artifactId>
          <version>${symbol_dollar}{maven-jxr-plugin.version}</version>
        </plugin>
        <plugin>
          <artifactId>maven-site-plugin</artifactId>
          <version>${symbol_dollar}{maven-site-plugin.version}</version>
          <configuration>
            <inputEncoding>UTF-8</inputEncoding>
            <outputEncoding>UTF-8</outputEncoding>
          </configuration>
        </plugin>
        <plugin>
          <artifactId>maven-project-info-reports-plugin</artifactId>
          <version>${symbol_dollar}{maven-project-info-reports-plugin.version}</version>
        </plugin>
        <plugin>
          <groupId>org.sonatype.plugins</groupId>
          <artifactId>nexus-staging-maven-plugin</artifactId>
          <version>${symbol_dollar}{nexus-staging-maven-plugin.version}</version>
        </plugin>
        <plugin>
          <artifactId>maven-gpg-plugin</artifactId>
          <version>${symbol_dollar}{maven-gpg-plugin.version}</version>
        </plugin>
        <plugin>
          <groupId>org.codehaus.mojo</groupId>
          <artifactId>exec-maven-plugin</artifactId>
          <version>${symbol_dollar}{exec-maven-plugin.version}</version>
        </plugin>
        <plugin>
          <artifactId>maven-checkstyle-plugin</artifactId>
          <version>${symbol_dollar}{maven-checkstyle-plugin.version}</version>
          <dependencies>
            <dependency>
              <groupId>com.puppycrawl.tools</groupId>
              <artifactId>checkstyle</artifactId>
              <version>${symbol_dollar}{checkstyle.version}</version>
            </dependency>
          </dependencies>
        </plugin>
        <plugin>
          <artifactId>maven-pmd-plugin</artifactId>
          <version>${symbol_dollar}{maven-pmd-plugin.version}</version>
          <dependencies>
            <dependency>
              <groupId>net.sourceforge.pmd</groupId>
              <artifactId>pmd-core</artifactId>
              <version>${symbol_dollar}{pmd.version}</version>
            </dependency>
            <dependency>
              <groupId>net.sourceforge.pmd</groupId>
              <artifactId>pmd-java</artifactId>
              <version>${symbol_dollar}{pmd.version}</version>
            </dependency>
            <dependency>
              <groupId>net.sourceforge.pmd</groupId>
              <artifactId>pmd-javascript</artifactId>
              <version>${symbol_dollar}{pmd.version}</version>
            </dependency>
            <dependency>
              <groupId>net.sourceforge.pmd</groupId>
              <artifactId>pmd-jsp</artifactId>
              <version>${symbol_dollar}{pmd.version}</version>
            </dependency>
          </dependencies>
          <configuration>
            <rulesets>
              <ruleset>category/java/bestpractices.xml</ruleset>
              <ruleset>category/java/codestyle.xml</ruleset>
              <ruleset>category/java/design.xml</ruleset>
              <ruleset>category/java/documentation.xml</ruleset>
              <ruleset>category/java/errorprone.xml</ruleset>
              <ruleset>category/java/multithreading.xml</ruleset>
              <ruleset>category/java/performance.xml</ruleset>
              <ruleset>category/java/security.xml</ruleset>
            </rulesets>
            <targetJdk>${symbol_dollar}{java.version}</targetJdk>
            <!--<failOnViolation>true</failOnViolation>-->
            <failOnViolation>false</failOnViolation>
            <failurePriority>1</failurePriority>
            <printFailingErrors>true</printFailingErrors>
            <verbose>true</verbose>
          </configuration>
        </plugin>
                
        <!-- SpotBugs -->
        <plugin>
          <groupId>com.github.spotbugs</groupId>
          <artifactId>spotbugs-maven-plugin</artifactId>
          <version>${symbol_dollar}{spotbugs-maven-plugin.version}</version>
          <configuration>
            <effort>Max</effort>
            <threshold>Low</threshold>
            <maxRank>20</maxRank>
            <trace>true</trace>
            <!-- <failOnError>true</failOnError> -->
            <failOnError>false</failOnError>
            <xmlOutput>true</xmlOutput>
            <xmlOutputDirectory>target/site</xmlOutputDirectory>
          </configuration>
        </plugin>
        
        <!-- spotless -->
        <plugin>
          <groupId>com.diffplug.spotless</groupId>
          <artifactId>spotless-maven-plugin</artifactId>
          <version>${symbol_dollar}{spotless-maven-plugin.version}</version>
        </plugin>

        <plugin>
          <groupId>org.owasp</groupId>
          <artifactId>dependency-check-maven</artifactId>
          <version>${symbol_dollar}{dependency-check-maven.version}</version>
        </plugin>
      </plugins>
    </pluginManagement>
        
    <!-- enforcer -->
    <plugins>
      <plugin>
        <artifactId>maven-enforcer-plugin</artifactId>
        <version>${symbol_dollar}{maven-enforcer-plugin.version}</version>
        <executions>
          <execution>
            <id>enforce-maven</id>
            <phase>validate</phase>
            <goals>
              <goal>enforce</goal>
            </goals>
            <configuration>
              <rules>
                <requireMavenVersion>
                  <version>${symbol_dollar}{requireMavenVersion.version}</version>
                </requireMavenVersion>
                <requireJavaVersion>
                  <version>${symbol_dollar}{requireJavaVersion.version}</version>
                </requireJavaVersion>
              </rules>
            </configuration>
          </execution>
        </executions>
      </plugin>
            
      <!-- versions -->
      <plugin>
        <groupId>org.codehaus.mojo</groupId>
        <artifactId>versions-maven-plugin</artifactId>
        <version>${symbol_dollar}{versions-maven-plugin.version}</version>
        <configuration>
          <rulesUri>file://${symbol_dollar}{session.executionRootDirectory}/config/maven-versions-plugin-rules.xml</rulesUri>
          <generateBackupPoms>false</generateBackupPoms>
          <allowRangeMatching>true</allowRangeMatching>
        </configuration>
      </plugin>
            
      <!-- exec -->
      <plugin>
        <groupId>org.codehaus.mojo</groupId>
        <artifactId>exec-maven-plugin</artifactId>
        <configuration>
          <executable>java</executable>
          <skip>true</skip>
        </configuration>
      </plugin>
    </plugins>
  </build>
</project>
